# joycon

./: Cargo.toml  LICENSE.md  README.md
common/: Cargo.toml
common/src/: lib.rs  range.rs
common/src/ipc/: paths.rs
joycon-driver/: Cargo.toml
joycon-driver/src/: axis.rs  button.rs  data.rs  device.rs  driver.rs  frame.rs  handler.rs  id.rs  input.rs  io.rs  log.rs  main.rs  output.rs  service.rs
joycon-driver/src/controller/: axis.rs  button.rs  mod.rs
joycon-driver/src/controller/hid/: mod.rs  output.rs
joycon-driver/src/data/: calibration.rs  raw.rs
joycon-driver/src/device/: calibration.rs  id.rs
joycon-driver/src/driver/: command.rs  event.rs
joycon-driver/src/handler/: console.rs  signal.rs  socket.rs
joycon-driver/src/input/: button.rs  frame.rs
joycon-driver/src/io/: console.rs  socket.rs
joycon-driver/src/service/: console.rs  socket.rs
joycon-proxy/: Cargo.toml
joycond/: Cargo.toml
joycond/src/: daemon.rs  main.rs
package/linux/: 55-joy-con.rules  README.md
src/: endian.rs  has.rs  log.rs  main.rs
src/controller/: analog.rs  axis.rs  button.rs  command.rs  id.rs  mod.rs  motion.rs  product.rs  state.rs  vendor.rs
src/controller/hid/: input.rs  mod.rs  output.rs
