[package]
name = "joycon-driver"
version = "0.1.0"
authors = ["Alexander Peters <alexander.n.peters@gmail.com>"]

[dependencies]
byteorder = "1.2"
common = { path = "../common" }
getopts = "0.2"
signal-hook = "0.1"
termion = "1.5"

[dependencies.hidapi]
version = "0.5"
default-features = false
features = ["linux-static-hidraw"]